# No-Project-Time-Tracker

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs  parsing_utils.rs  report_generation.rs
src/db/: db_manager.rs
src/tests/: e2e.rs  mod.rs  parsing_utils.rs
