[package]
name = "no-project-time-tracker"
version = "0.2.0"
authors = ["Simon Lindhen <simon.lindhen@hotmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33.0"
regex = "1"
dirs = "2.0.2"
[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]
